<resources>
    <string name="app_name">Rescue Map</string>
    <string name="title_activity_maps">Rescue Map</string>
    <string name="label_finished_zoom">Finished zoom level</string>
    <string name="label_internet_error">ERROR: No internet connection!</string>
    <string name="inputs">Inputs</string>
    <string name="latitude">Latitude</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="victim_category">Victim category</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="zoomingInProgress">Zooming in progress, please wait.</string>
    <string name="noFineLocationPermission">No access permitted for fine user location! Please go to Settings/Apps/Rescue Map/Permissions and enable Location.</string>
    <string name="accountPermissionError">No user account permission, will return empty string as user name</string>
    <string name="child_7_years_old_speed_kmph">Child 7 years old speed [km/h]</string>
    <string name="child_15_years_old_speed_kmph">Child 15 years old speed [km/h]</string>
    <string name="adult_30_years_old_speed_kmph">Adult 30 years old speed [km/h]</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="restore_defaults">Restore defaults</string>
    <string name="longitude">Longitude</string>
    <string name="delete">Delete</string>
    <string-array name="victim_category_array">
        <item>Child 7 years old</item>
        <item>Teenager 15 years old</item>
        <item>Adult 30 years old</item>
    </string-array>
</resources>
