<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    android:padding="5dp"

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/settings"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:text="@string/child_7_years_old_speed_kmph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/tvChild7YearsOldSpeed" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etChild7YearsOldSpeed_kmph" />

    <TextView
        android:text="@string/child_15_years_old_speed_kmph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/tvChild15YearsOldSpeed" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etChild15YearsOldSpeed_kmph" />

    <TextView
        android:text="@string/adult_30_years_old_speed_kmph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/tvAdult30YearsOldSpeed" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etAdult30YearsOldSpeed_kmph" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:id="@+id/btnSave"
            android:onClick="btnSaveClick"
            android:layout_weight="1" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:id="@+id/btnCancel"
            android:onClick="btnCancelClick"
            android:layout_weight="1" />

        <Button
            android:text="@string/restore_defaults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:id="@+id/btnRestoreDefaults"
            android:onClick="btnRestoreDefaultsClick"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>